add popular view prototype

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -6,3 +6,9 @@
   letter-spacing: 1rem;
   padding: 2rem;
 }
+
+.heading-secondary {
+  color: $color-primary-light-2;
+  font-size: 3rem;
+  text-transform: uppercase;
+}
