--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   height: 20rem;
   justify-content: space-between;
+  background-color: $color-primary-dark-2;
 }
 
 .header-box {
