--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,8 @@
 @import "base/typography";
 
 @import "components/searchBar";
+@import "components/popular";
 
 @import "layout/header";
 @import "layout/navigation";
+@import "layout/content";
