--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,7 +5,7 @@
 @import "base/typography";
 
 @import "components/searchBar";
-@import "components/popular";
+@import "components/results";
 
 @import "layout/header";
 @import "layout/navigation";
