--- a/src/sass/components/_results.scss
+++ b/src/sass/components/_results.scss
@@ -1,13 +1,13 @@
-.popular {
+.results {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  // justify-content: space-between;
 }
 
-.popular-item {
+.results-item {
   display: flex;
   flex-direction: column;
-  flex: 1 0 19%;
+  flex: 0 0 19%;
   align-items: center;
   padding: 1rem;
   margin: 1rem 0 0 1rem;
