--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,7 +5,9 @@
 @import "base/typography";
 
 @import "components/searchBar";
-@import "components/results";
+@import "components/show";
+@import "components/searchResults";
+@import "components/upcomingBar";
 
 @import "layout/header";
 @import "layout/navigation";
