--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,8 +1,5 @@
 .header {
   display: flex;
-  flex-direction: column;
-  height: 20rem;
-  justify-content: space-between;
   background-color: $color-primary-dark-2;
 }
 
@@ -10,4 +7,5 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex: 0 0 100%;
 }
