--- a/src/sass/components/_searchResults.scss
+++ b/src/sass/components/_searchResults.scss
@@ -1,23 +1,18 @@
 .results-item {
   display: flex;
   flex-direction: column;
-  flex: 0 0 19%;
+  flex: 1 1 auto;
   align-items: center;
   padding: 1rem;
-  margin: 1rem 0 0 1rem;
+  margin: 1rem 0.5rem 0 0.5rem;
   background-color: #fff;
   position: relative;
-  height: 40rem;
+  max-width: 23rem;
 
-  &__img-box {
-    height: 27em;
-  }
 
   &__img {
     width: 100%;
-    height: 100%;
     display: block;
-    object-fit: cover;
   }
 
   &__name {
