--- a/src/sass/components/_show.scss
+++ b/src/sass/components/_show.scss
@@ -1,3 +1,50 @@
 .show {
-  
+  display: flex;
+&__details-box {
+  display: flex;
+  background-color: #fff;
+  padding: 1rem
+}
+
+&__img {
+  align-self: center;
+  width: 24%;
+}
+
+&__details {
+  display: flex;
+  flex-direction: column;
+  margin: 0 2rem;
+  font-size: 1.9rem;
+  justify-content: space-between;
+  align-items: center;
+}
+
+&__description {
+
+}
+
+&__info {
+
+}
+
+&__rating {
+
+}
+
+&__runtime {
+
+}
+
+&__genres {
+
+}
+
+&__episodes-box {
+
+}
+
+&__crew-box {
+
+}
 }
