--- a/src/sass/components/_show.scss
+++ b/src/sass/components/_show.scss
@@ -3,12 +3,22 @@
 &__details-box {
   display: flex;
   background-color: #fff;
-  padding: 1rem
+  padding: 1rem;
+  padding-bottom: 10rem;
+}
+
+&__img-box {
+  display: flex;
+  flex: 0 0 26rem;
+  height: 37rem;
+  
 }
 
 &__img {
-  align-self: center;
-  width: 24%;
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 0.5rem;
 }
 
 &__details {
@@ -18,6 +28,14 @@
   font-size: 1.9rem;
   justify-content: space-between;
   align-items: center;
+}
+
+&__details-top {
+
+}
+
+&__details-mid {
+
 }
 
 &__description {
