Add Favorite model

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -3,8 +3,7 @@
   font-size: 6rem;
   color: $color-primary-light-1;
   text-transform: uppercase;
-  letter-spacing: 1rem;
-  padding: 2rem;
+  padding-top: 2rem;
 }
 
 .heading-secondary {
