--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,6 +1,7 @@
 .btn {
   border: none;
   padding: 0.5rem;
+  cursor: pointer;
 
   &--fav-small {
     background-image: linear-gradient(to right, orange, red);
