--- a/src/sass/components/_searchBar.scss
+++ b/src/sass/components/_searchBar.scss
@@ -1,11 +1,15 @@
 .search-bar{
   display: flex;
   justify-content: center;
+  margin: auto;
+  margin-bottom: 2rem;
 
   &__input {
-    padding: 1.5rem;
+    padding: 1rem 2rem;
     border: none;
-    flex: 0 0 40%;
+    border-radius: 100px;
+    margin-right: -5rem;
+    width: 45rem;
   }
 
   &__icon{
@@ -15,5 +19,6 @@
 
   &__btn {
     border: none;
+    background-color: #fff;
   }
 }
