Add toggle option on 'add to favorite' buttons

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -11,6 +11,14 @@
 
   }
 
+  &--fav-small2 {
+    background-image: linear-gradient(to right, rgb(238, 238, 238), rgb(26, 17, 17));
+    color: #fff;
+    padding: 1rem;
+    border-radius: 5px;
+
+  }
+
   &--info {
     background-color: transparent;
     margin-bottom: 1rem;
