--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
 @import "components/show";
 @import "components/searchResults";
 @import "components/upcomingBar";
+@import "components/episodes";
 
 @import "layout/header";
 @import "layout/navigation";
