--- a/src/sass/components/_episodes.scss
+++ b/src/sass/components/_episodes.scss
@@ -1,5 +1,25 @@
 .episode {
-  width: 30rem;
-  height: 10rem;
+  display: flex;
   flex: 0 0 100%;
+  background-color: white;
+  padding: 1rem;
+  margin-top: .5rem;
+  justify-content: space-between;
+  align-items: center;
+
+  &__img {
+    width: 100%;
+    height: 100%;
+    border-radius: 3px;
+  }
+
+  &__details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__info {
+    font-size: 2rem;
+  }
 }
