--- a/src/sass/components/_show.scss
+++ b/src/sass/components/_show.scss
@@ -77,7 +77,6 @@
 &__season-list {
   display: flex;
   flex: 0 0 100%;
-  height: 5rem;
   justify-content: space-around;
   align-items: center;
   background-color: #fff;
@@ -85,6 +84,12 @@
 
 &__season-item {
   display: flex;
+  width: 100%;
+  padding: 1.5rem 5rem;
+  justify-content: center;
+  font-size: 1.4rem;
+  border: 1px solid red;
+
 }
 
 &__episodes-box {
