--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 @import "components/searchResults";
 @import "components/upcomingBar";
 @import "components/episodes";
+@import "components/cast";
 
 @import "layout/header";
 @import "layout/navigation";
