--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -3,5 +3,5 @@ $color-primary-dark-1: #0B0C10;
 $color-primary-dark-2: #1F2833;
 $color-primary-dark-3: #222629;
 
-$color-primary-light-1: #66FCF1;
+$color-primary-light-1: orangered;
 $color-primary-light-2: #45A29E;
