--- a/src/sass/layout/_content.scss
+++ b/src/sass/layout/_content.scss
@@ -1,6 +1,5 @@
 .content {
   display: flex;
-  background-color: #c1c0c0;
   min-height: 90vh;
   align-items: flex-start;
 
@@ -16,4 +15,15 @@
   flex-wrap: wrap;
   flex: 1;
   justify-content: flex-start;
+}
+
+.hp-box {
+  background: url(/img/comfortable-female-food-1040158.jpg);
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 90vh;
+  align-items: center;
+  justify-content: center;
 }
