--- a/src/sass/components/_searchResults.scss
+++ b/src/sass/components/_searchResults.scss
@@ -8,7 +8,7 @@
   background-color: #fff;
   position: relative;
   max-width: 23rem;
-  border: 1px solid #e8e8e8c9;
+  box-shadow: $shadow-light;
 
 
   &__img {
