--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,7 +1,8 @@
 
-$color-primary-dark-1: #0B0C10;
-$color-primary-dark-2: #1F2833;
+$color-primary-dark-1: #26154f;
+$color-primary-dark-2: #26164E;
 $color-primary-dark-3: #222629;
 
-$color-primary-light-1: orangered;
-$color-primary-light-2: #45A29E;
+$color-primary-light-1: #ff5759;
+$color-primary-light-2: #6441a4;
+$shadow-light: 0 2px 5px rgba(42, 38, 54, 0.29);
