--- a/src/sass/components/_cast.scss
+++ b/src/sass/components/_cast.scss
@@ -6,6 +6,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: .5rem;
+  box-shadow: $shadow-light;
 
   &__img {
     width: 125px;
