--- a/src/sass/components/_episodes.scss
+++ b/src/sass/components/_episodes.scss
@@ -6,6 +6,7 @@
   margin-top: .5rem;
   justify-content: space-between;
   align-items: center;
+  box-shadow: $shadow-light;
 
   &__img {
     width: 100%;
