--- a/src/sass/components/_show.scss
+++ b/src/sass/components/_show.scss
@@ -59,9 +59,6 @@
 
   }
 
-  &__episodes-box {
-
-  }
 
   &__crew-box {
 
@@ -72,7 +69,14 @@
     flex: 0 0 100%;
     height: 5rem;
     background-color: #fff;
+    align-items: center;
     margin-top: 2rem;
+    box-shadow: $shadow-light;
+
+    &-header {
+      text-align: center;
+      flex: 1;
+    }
   }
 
   &__season-list {
