--- a/src/sass/components/_searchResults.scss
+++ b/src/sass/components/_searchResults.scss
@@ -10,6 +10,10 @@
   max-width: 23rem;
   box-shadow: $shadow-light;
 
+  &__link {
+    position: relative;
+  }
+
 
   &__img {
     width: 100%;
@@ -17,7 +21,7 @@
   }
 
   &__name {
-    font-size: 2rem;
+    font-size: 1.6rem;
   }
 
   &__network {
@@ -32,7 +36,6 @@
     position: absolute;
     top: 0;
     left: 0;
-    background-color: rgba($color-primary-dark-3, 0.4);
     opacity: 0;
     width: 100%;
     height: 100%;
