--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -5,4 +5,5 @@ $color-primary-dark-3: #222629;
 
 $color-primary-light-1: #ff5759;
 $color-primary-light-2: #6441a4;
+$color-primary-light-3: #fec15e;
 $shadow-light: 0 2px 5px rgba(42, 38, 54, 0.29);
