--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,6 +1,6 @@
 body {
-  background-color: #fff;
-  font-family: 'Lato', sans-serif;
+  background-color: #fdfdfd;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .wrapper {
