--- a/src/sass/components/_show.scss
+++ b/src/sass/components/_show.scss
@@ -4,8 +4,8 @@
   &__details-box {
     display: flex;
     background-color: #fff;
-    padding: 1rem;
-    padding-bottom: 10rem;
+    padding: 0.5rem;
+    box-shadow: $shadow-light;
   }
 
   &__img-box {
@@ -19,14 +19,12 @@
     display: block;
     width: 100%;
     height: 100%;
-    border-radius: 0.5rem;
   }
 
   &__details {
     display: flex;
     flex-direction: column;
     margin: 0 2rem;
-    font-size: 1.9rem;
     justify-content: space-between;
     align-items: center;
   }
@@ -40,11 +38,11 @@
   }
 
   &__description {
-
+    font-size: 2rem;
   }
 
   &__info {
-
+    font-size: 1.7rem;
   }
 
   &__rating {
@@ -93,7 +91,7 @@
     padding: 1.5rem 5rem;
     justify-content: center;
     font-size: 1.4rem;
-    border: 1px solid red;
+    border: 1px solid $color-primary-light-2;
 
   }
 
