--- a/src/sass/components/_show.scss
+++ b/src/sass/components/_show.scss
@@ -77,21 +77,46 @@
     }
   }
 
+  &__season-box {
+    display: flex;
+    overflow: hidden;
+    background-color: #fff;
+    justify-content: space-between;
+    box-shadow: 0px 4px 5px 0px rgba(144, 144, 144, 0.29);
+  }
+
+
   &__season-list {
     display: flex;
     flex: 0 0 100%;
-    justify-content: space-around;
     align-items: center;
     background-color: #fff;
+    max-width: 112rem;
+    transform: translateX(0rem);
   }
 
   &__season-item {
     display: flex;
-    width: 100%;
+    width: 14rem;
+    background-color: #fff;
     padding: 1.5rem 5rem;
     justify-content: center;
     font-size: 1.4rem;
-    border: 1px solid $color-primary-light-2;
+    position: relative;
+
+    &:hover::before {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      left: 0;
+      border-bottom: 2px solid #fec15e;
+    }
+
+
+  }
+
+  &__episodes {
 
   }
 
