update Favorites controller for episodes handling

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -26,6 +26,14 @@
       background-color: $color-primary-light-1;
       width: 20rem;
     }
+
+    &--watched {
+      background-color: $color-primary-light-2;
+    }
+
+    &--watched2 {
+      background-color: $color-primary-light-1;
+    }
   }
 
 
