filter and sort inputs for schedule and upcomingBar controllers

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,7 @@
 @import "components/upcomingBar";
 @import "components/episodes";
 @import "components/cast";
+@import "components/schedule";
 
 @import "layout/header";
 @import "layout/navigation";
