--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -7,3 +7,4 @@ $color-primary-light-1: #ff5759;
 $color-primary-light-2: #6441a4;
 $color-primary-light-3: #fec15e;
 $shadow-light: 0 2px 5px rgba(42, 38, 54, 0.29);
+$shadow-light2: 2px 5px 10px rgba(0, 0, 0, 0.51);
