add media queries for mobile/tablet landscape up

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -5,7 +5,11 @@ body {
 
 .wrapper {
   margin:  0 auto;
-  width: 120rem;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
+
+  @include for-size(tablet-port-up) {
+    width: 120rem;
+  }
 }
