--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -8,7 +8,11 @@
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%;
+  font-size: 50%; //1 rem = 8px
+
+  @include for-size(tablet-port-up) {
+    font-size: 62.5%;
+  }
 }
 
 a, a:link, a:hover, a:visited, a:active {text-decoration: none};
