--- a/src/sass/components/_searchBar.scss
+++ b/src/sass/components/_searchBar.scss
@@ -1,20 +1,38 @@
 .search-bar{
   display: flex;
   justify-content: center;
+  margin-left: -1.5rem;
 
   &--top {
-    margin: auto;
-  }
+    width: 100%;
+    margin-left: -9px;
+    margin-top: -6px;
+    margin-bottom: 4px;
+
+    @include for-size(tablet-port-up) {
+      margin: auto;
+      width: auto;
+      }
+    }
+
 
   &__input {
     padding: 1rem 2rem;
     border: none;
     border-radius: 100px;
     margin-right: -5rem;
-    width: 45rem;
+    width: 30rem;
+
+    @include for-size(tablet-port-up) {
+      width: 45rem;
+    }
 
     &--top {
-      width: 27rem;
+      width: 90%;
+
+      @include for-size(tablet-port-up) {
+        width: 27rem;
+      }
     }
   }
 
