--- a/src/sass/layout/_content.scss
+++ b/src/sass/layout/_content.scss
@@ -3,9 +3,17 @@
   min-height: 90vh;
   align-items: flex-start;
 
+  @include for-size(tablet-port-up) {
+    min-height: 89vh;
+  }
+
   &__heading {
-    margin-bottom: 1rem;
     flex: 0 0 100%;
+    text-align: center;
+
+    @include for-size(tablet-port-up) {
+      margin-bottom: 1rem;
+    }
   }
 }
 
@@ -14,7 +22,7 @@
   display: flex;
   flex-wrap: wrap;
   flex: 1;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .hp-box {
@@ -23,7 +31,11 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 90vh;
+  height: 93vh;
   align-items: center;
   justify-content: center;
+
+  @include for-size(tablet-port-up) {
+    height: 89.5vh;
+  }
 }
