--- a/src/sass/layout/_navigation.scss
+++ b/src/sass/layout/_navigation.scss
@@ -1,11 +1,30 @@
 .nav {
-  flex: 1;
+  display: none;
+  position: absolute;
+  top: 8rem;
+  width: 100%;
+  background-color: rgba($color-primary-dark-1, 0.6);
+  z-index: 500;
+
+  @include for-size(tablet-port-up){
+    display: flex;
+    position: initial;
+    top: unset;
+    background-color: unset;
+  }
+
+
 
   &__list {
   list-style: none;
   font-size: 1.4rem;
-  margin-right: 4rem;
-  display: flex;
+  width: 100%;
+
+  @include for-size(tablet-port-up){
+    display: flex;
+    margin-right: 4rem;
+  }
+
   }
 
   &__item {
@@ -22,4 +41,82 @@
     padding: 1.5rem 3.5rem;
 
     }
+
+  &__checkbox {
+    display: none;
+  }
+
+
+  &__checkbox:checked ~ & {
+    display: flex;
+
+    @include for-size(tablet-port-up){
+      display: none;
+    }
+}
+
+
+  &__button {
+    height: 7rem;
+    width: 7rem;
+    z-index: 1400;
+    text-align: center;
+    cursor: pointer;
+    right: 4px;
+    top: 29px;
+    position: absolute;
+
+    @include for-size(tablet-port-up) {
+      display: none;
+    }
+  }
+
+  &__icon {
+    position: relative;
+
+    &,
+    &::after,
+    &::before {
+      width: 4rem;
+      height: .4rem;
+      background-color: $color-primary-light-3;
+      display: inline-block;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: -1.2rem;
+      left: 0;
+      transition: all .2s;
+
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 1.3rem;
+      left: 0;
+      transition: all .2s;
+
+    }
+  }
+  &__checkbox:checked + &__button &__icon {
+    background-color: transparent;
+  }
+
+  &__checkbox:checked + &__button &__icon::before {
+    top: 0;
+    transform: rotate(135deg);
+
+  }
+
+  &__checkbox:checked + &__button &__icon::after {
+    top: 0;
+    transform: rotate(-135deg);
+
+  }
+
+
+
 }
