--- a/src/sass/components/_searchResults.scss
+++ b/src/sass/components/_searchResults.scss
@@ -1,14 +1,20 @@
 .results-item {
   display: flex;
   flex-direction: column;
-  flex: 1 1 auto;
+  flex: 0 0 100%;
   margin: 1rem 0.5rem 0 0.5rem;
   background-color: #fff;
   position: relative;
-  max-width: 23rem;
+  max-width: 19rem;
   box-shadow: $shadow-light2;
   justify-content: space-between;
   color: $color-primary-dark-1;
+
+  @include for-size(tablet-port-up) {
+    max-width: 23rem;
+  }
+
+
 
 
   &__link {
