add add picture elements and mobile view for shows

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -38,6 +38,24 @@
     &--watched2 {
       background-color: $color-primary-light-1;
     }
+
+    &--watch-all {
+      background-color: $color-primary-light-2;
+      width: 50%;
+
+      @include for-size(tablet-port-up) {
+        width: auto;
+      }
+    }
+
+    &--unwatch-all {
+      background-color: $color-primary-light-1;
+      width: 50%;
+
+      @include for-size(tablet-port-up) {
+        width: auto;
+      }
+    }
   }
 
 
