--- a/src/sass/components/_show.scss
+++ b/src/sass/components/_show.scss
@@ -3,15 +3,25 @@
 
   &__details-box {
     display: flex;
+    flex-direction: column;
     background-color: #fff;
     padding: 0.5rem;
     box-shadow: $shadow-light;
+
+    @include for-size(tablet-port-up) {
+      flex-direction: row;
+    }
   }
 
   &__img-box {
-    display: flex;
-    flex: 0 0 26rem;
-    height: 37rem;
+    display: block;
+    height: auto;
+
+    @include for-size(tablet-port-up) {
+      display: flex;
+      flex: 0 0 26rem;
+      height: 37rem;
+    }
 
   }
 
@@ -91,18 +101,34 @@
     flex: 0 0 100%;
     align-items: center;
     background-color: #fff;
-    max-width: 112rem;
+    max-width: 32rem;
     transform: translateX(0rem);
+
+    @media (min-width: 360px) {
+      max-width: 35rem;
+    }
+
+    @media (min-width: 414px) {
+      max-width: 43rem;
+    }
+
+    @include for-size(tablet-port-up) {
+      max-width: 112rem;
+    }
   }
 
   &__season-item {
     display: flex;
     width: 14rem;
     background-color: #fff;
-    padding: 1.5rem 5rem;
+    padding: 1.5rem 3rem;
     justify-content: center;
     font-size: 1.4rem;
     position: relative;
+
+    @include for-size(tablet-port-up) {
+      padding: 1.5rem 5rem;
+    }
 
     &:hover::before {
       content: '';
