--- a/src/sass/components/_upcomingBar.scss
+++ b/src/sass/components/_upcomingBar.scss
@@ -13,6 +13,13 @@
     padding: 0.5rem 0;
   }
 
+  &__empty {
+    width: 100%;
+    font-size: 2rem;
+    padding: 1rem;
+    text-align: center;
+  }
+
   &__list {
     display: flex;
     flex: 0 0 100%;
