--- a/src/sass/layout/_content.scss
+++ b/src/sass/layout/_content.scss
@@ -26,7 +26,7 @@
 }
 
 .hp-box {
-  background: url(/img/landing.jpg);
+  background: url(../img/landing.jpg);
   background-size: cover;
   display: flex;
   flex-direction: column;
