--- a/src/sass/components/_searchBar.scss
+++ b/src/sass/components/_searchBar.scss
@@ -10,8 +10,13 @@
     margin-bottom: 4px;
 
     @include for-size(tablet-port-up) {
-      margin: auto;
-      width: auto;
+      margin: auto 0 auto 1rem;
+      width: 40%;
+      }
+
+    @include for-size(tablet-land-up) {
+      margin: auto 0 auto 1rem;
+      width: 21%;
       }
     }
 
@@ -22,16 +27,34 @@
     border-radius: 100px;
     margin-right: -5rem;
     width: 30rem;
+    background-color: #fff;
+    transition: all 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
 
     @include for-size(tablet-port-up) {
       width: 45rem;
     }
 
-    &--top {
-      width: 90%;
+    &:focus {
+      width: 31rem;
 
       @include for-size(tablet-port-up) {
-        width: 27rem;
+        width: 47rem;
+      }
+    }
+
+    &--top {
+      width: 85%;
+
+      @include for-size(tablet-port-up) {
+        width: 100%;
+      }
+
+      &:focus {
+        width: 90%;
+
+        @include for-size(tablet-port-up) {
+          width: 27rem;
+        }
       }
     }
   }
@@ -43,6 +66,8 @@
 
   &__btn {
     border: none;
+    height: 99%;
+    align-self: center;
     background-color: #fff;
   }
 }
